Bug#54467 performance schema complains of wrong structure in bootstrap mode

Backport from mysql-next-mr (5.6) to mysql-trunk (5.5)